/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-09-22 08:34 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/compiler/Makefile
    ! remove gencobj.c dependency

2012-09-22 08:27 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  - source/compiler/gencobj.c
  - source/compiler/genobj32.c
  * include/hbcomp.h
  * source/compiler/hbusage.c
  * source/compiler/harbour.c
  * winmake/common.mak
  * winmake/compile.mak
    ! removed never-and-won't-be-functional object file generation stuffs

2012-09-22 05:50 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/makefile.vc
  * winmake/msvc.err
    + support for MSVC 11 (aka Ms Visual Studio 2012)

2012-09-19 04:30 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * bin/bld.bat
    ! remove MT attributes from non-vm libraries

2012-09-19 02:30 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/hbzlib/zip.c
  * contrib/hbzlib/zipnew.cpp
  * contrib/hbzlib/include/hbzip.h
  * contrib/hbzlib/include/hbzip2.h
    ! add 2nd parameter to hb___checkFile for checking file existence when
    dealing with decompression

2012-09-18 11:49 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * source/common/hbmem.c
    * Minor correction to declaration of dv_memcpy()

2012-09-16 18:19 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/ct/*.c
  * source/ct/*.prg
    ! reformatted

2012-09-16 17:33 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/gd/source/gdbar.prg
  * contrib/gd/source/gdbarcode.prg
  * contrib/gd/include/gd.h
  * contrib/gd/include/gdcache.h
  * contrib/gd/include/gdfontg.h
  * contrib/gd/include/gdfontl.h
  * contrib/gd/include/gdfontmb.h
  * contrib/gd/include/gdfonts.h
  * contrib/gd/include/gdfontt.h
  * contrib/gd/include/gdfx.h
  * contrib/gd/include/gdhelpers.h
  * contrib/gd/include/gd_io.h